[tool.poetry]
name = "workshop-streamlit-dash-aovivo"
version = "0.1.0"
description = ""
authors = ["lvgalvaofilho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.0"
matplotlib = "^3.9.1"
folium = "^0.17.0"
streamlit-folium = "^0.22.0"
wordcloud = "^1.9.3"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
